--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,30 @@
-local.settings.json
+# Dependencies
 node_modules
+
+# Build
 dist
 *.tsbuildinfo
+
+# AWS
+.serverless
+.aws-sam
+
+# Environment
+.env
+.env.local
+*.pem
+
+# IDE
+.vscode
+.idea
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Azure (legacy)
+local.settings.json
