--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "lib": ["ES2020"],
     "outDir": "dist",
     "rootDir": "src",
-    "types": ["node", "@azure/functions", "vitest"]
+    "types": ["node", "@types/aws-lambda"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "test"]
