feat: implementa API v2.0 com formulário multi-step e custom domain
- Atualiza contrato da API para formulário multi-step de nômades
- Implementa 12 validações rigorosas (email, enums, arrays, etc)
- Adiciona suporte a necessidades customizadas (outros:)
- Configura Custom Domain permanente (api.fristad.com.br)
- Adiciona plugin serverless-domain-manager para mapeamento automático
- Atualiza para MongoDB Atlas em vez de DynamoDB local
- Adiciona metadata (source, version, userAgent, ipAddress)
- Documenta mudanças em CHANGELOG.md e CUSTOM-DOMAIN.md

Breaking Changes:
- Persona agora aceita apenas 'nomade'
- Remove campos antigos (countries, propertyTitle, etc)
- Adiciona novos campos obrigatórios (cities, accommodationType, budget, duration, languages)

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ Thumbs.db
 
 # Azure (legacy)
 local.settings.json
+
+# Test files (local only)
+test-payloads/
+test.sh
+TEST-RESULTS.md
+TESTING.md
+DEPLOYMENT.md
+DNS-SETUP.md
+ENVIRONMENTS.md
+PRODUCTION.md
