--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/aws-lambda": "^8.10.138",
     "@types/node": "^20.14.11",
     "serverless": "^3.38.0",
+    "serverless-domain-manager": "^8.0.0",
+    "serverless-dynamodb": "^0.2.56",
     "serverless-offline": "^13.3.0",
+    "serverless-offline-dynamodb": "^0.0.12",
     "serverless-plugin-typescript": "^2.1.5",
     "typescript": "^5.6.3"
   }
 }
-
-
